@@ -303,3 +303,13 @@ retrieve-method: svn
 bootstrap: ./bootstrap.sh
 configure: --with-scoplib=$poccsrcdir/ir/install-scoplib --with-past=$poccsrcdir/ir/install-past --with-rose=${ROSE_ROOT} --with-boost=${BOOST_ROOT} --with-barvinok=$poccsrcdir/math/install-barvinok --with-hlsir=$poccsrcdir/ir/install-hlsir --with-gmp-prefix=$poccsrcdir/math/external/install --with-polylib-gmp=$poccsrcdir/math/install-polylib --with-isl=$poccsrcdir/math/install-isl --with-lpsolve=$poccsrcdir/math/lp_solve --with-candl=$poccsrcdir/analyzers/install-candl --with-piplib=$poccsrcdir/math/install-piplib-hybrid --with-cloog=$poccsrcdir/generators/install-cloog
 make-depends: scoplib past barvinok hlsir isl lp_solve piplib-hybrid cloog
+
+
+[buffergen]
+category: hls
+module: buffergen
+location: svn+ssh://blue.cdsc.ucla.edu/home/svn/cdsc/polyhed-proj/Software/modules/buffergen
+retrieve-method: svn
+bootstrap: ./bootstrap.sh
+configure: --with-scoplib=$poccsrcdir/ir/install-scoplib --with-past=$poccsrcdir/ir/install-past --with-rose=${ROSE_ROOT} --with-boost=${BOOST_ROOT} --with-barvinok=$poccsrcdir/math/install-barvinok --with-hlsir=$poccsrcdir/ir/install-hlsir --with-gmp-prefix=$poccsrcdir/math/external/install --with-polylib-gmp=$poccsrcdir/math/install-polylib --with-isl=$poccsrcdir/math/install-isl --with-lpsolve=$poccsrcdir/math/lp_solve --with-candl=$poccsrcdir/analyzers/install-candl --with-piplib=$poccsrcdir/math/install-piplib-hybrid --with-cloog=$poccsrcdir/generators/install-cloog
+make-depends: scoplib past barvinok hlsir isl lp_solve piplib-hybrid cloog lotha
