@@ -14,7 +14,7 @@
 configuration: hls
 # Specify the software to use. Software name must match an entry in
 # configure.cfg.
-software-versions: scoplib fm piplib clan candl letsee polylib cloog pluto polyfeat pragmatize vectorizer scoptools clasttools storcompacter clastannotation isl piplib-gmp past ptile irconverter piplib-hybrid pvectorizer punroller ntl  barvinok hlsir lotha lp_solve
+software-versions: scoplib fm piplib clan candl letsee polylib cloog pluto polyfeat pragmatize vectorizer scoptools clasttools storcompacter clastannotation isl piplib-gmp past ptile irconverter piplib-hybrid pvectorizer punroller ntl  barvinok hlsir lotha lp_solve buffergen
 
 # The rest of the file is not used for the moment.
 pass-thru: clan candl cloog
