@@ -65,7 +65,7 @@ INCLUDES += \
 	$(ROSE_CPPFLAGS) $(BOOST_CPPFLAGS) \
 	-I$(install_prefix)/ir/install-hlsir/include			\
 	-I$(install_prefix)/hls/install-lotha/include			\
-	-I$(install_prefix)/math/install-barvinok/include		
+	-I$(install_prefix)/math/install-barvinok/include
 endif
 
 #############################################################################
@@ -147,7 +147,7 @@ endif
 
 if POCC_HAS_BARVINOK
   libpocc_la_LIBADD	+=						     \
-  $(install_prefix)/math/install-barvinok/lib/libbarvinok.la		     
+  $(install_prefix)/math/install-barvinok/lib/libbarvinok.la
 endif
 
 if POCC_HAS_HLS
@@ -155,11 +155,12 @@ if POCC_HAS_HLS
   $(install_prefix)/math/install-polylib/lib/libpolylibgmp.la		     \
   $(install_prefix)/math/lp_solve/lpsolve55/bin/ux64/liblpsolve55.so	     \
   $(install_prefix)/hls/install-lotha/lib/liblotha.la	  		     \
+  $(install_prefix)/hls/install-buffergen/lib/libbuffergen.la  		     \
   $(install_prefix)/ir/install-hlsir/lib/libhlsir.la	  		     \
-  $(install_prefix)/math/install-barvinok/lib/libbarvinok.la		     
+  $(install_prefix)/math/install-barvinok/lib/libbarvinok.la
 else
   libpocc_la_LIBADD	+=						     \
-  $(install_prefix)/math/install-polylib/lib/libpolylib64.la		     
+  $(install_prefix)/math/install-polylib/lib/libpolylib64.la
 endif
 
 ## FIXME: Removed this due to a potential conflict on Solaris10. We
